--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -350,6 +350,14 @@ $stack-border-width         = 2px
         &.delete
           fa                trash
 
+      .provider
+        padding             2px
+        font-size           10px
+        margin-right        5px
+        border-radius       3px
+        color               #FFF
+        text-shadow         0px 1px 1px #333
+        fr()
 
 #kdmaincontainer.hover
 #kdmaincontainer.collapsed
