--- a/client/home/lib/styl/homemyteam.styl
+++ b/client/home/lib/styl/homemyteam.styl
@@ -353,3 +353,6 @@ homemyteam.styl
     li
       font-size             13px
 
+.delete-team
+  margin                    40px 0px 30px 47px
+  color                     #f2778a
