--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -22,6 +22,7 @@ $stack-fg-color             = #59595C
 $stack-fg-color-bright      = #DDDDDD
 $stack-fg-color-yellow      = #FCC34E
 $stack-border-color         = #000000
+$stack-bg-color-dark        = #111111
 
 $stack-sideview-width       = 420px
 $stack-border-width         = 2px
@@ -150,9 +151,6 @@ $stack-border-width         = 2px
       height                inherit
       borderBox()
 
-      &.expanding
-        height              100vh
-
       > .title
         padding             15px 20px
         font-size           13px
@@ -175,7 +173,8 @@ $stack-border-width         = 2px
         .kdloader
           width             14px
           display           none
-          top               4px
+          top               3px
+          margin-left       10px
 
       .help-content
         height              100%
@@ -227,6 +226,10 @@ $stack-border-width         = 2px
 
 
   .editor-view
+
+    .wrapper
+      &.expanding
+        height              100vh
 
     .ace-find-replace-view
       bottom                0
@@ -298,6 +301,7 @@ $stack-border-width         = 2px
     &.expanded
       width                 100%
       min-width             100%
+      border-left           none
 
     &.pinned
       position              inherit
@@ -311,6 +315,10 @@ $stack-border-width         = 2px
       fa                    plus
       color                 $stack-fg-color-yellow
       display               none
+
+    .wrapper
+      min-width             $stack-sideview-width
+
 
   .side-view
 
@@ -358,6 +366,22 @@ $stack-border-width         = 2px
           cursor            pointer
           fr()
 
+    .button-field
+      border                none
+      bottom                30px
+      padding               10px 20px !important
+      background            $stack-bg-color-dark
+      z-index               10
+      position              fixed
+      right                 0
+      min-width             $stack-sideview-width
+      borderBox()
+
+      .kdbutton
+        span.kdloader
+          left              40% !important
+          top               25% !important
+
 
   .credential-list
     width                   inherit
@@ -373,7 +397,7 @@ $stack-border-width         = 2px
       width                 100%
       position              fixed
       bottom                30px
-      background            rgba(0,0,0,0.8)
+      background            $stack-bg-color-dark
       z-index               7
       display               none
 
@@ -434,6 +458,69 @@ $stack-border-width         = 2px
         text-shadow         0px 1px 1px #333
         cursor              pointer
         fr()
+
+
+  .add-credential-scroll
+    top                     44px
+    background              $stack-bg-color
+    font-size               13px
+    color                   $stack-fg-color
+    border-bottom           90px solid $stack-bg-color-dark
+    abs()
+
+    .kdformview
+
+      margin-top            50px
+
+      .advanced-field
+        display             none
+
+      &.in-advanced-mode
+        .advanced-field
+          display           block
+
+    .formline
+      padding               0 20px
+
+      &.help-line
+        margin-left         130px
+
+      label
+        min-width           110px
+        line-height         13px
+        margin-top          8px
+        margin-right        20px
+        text-align          right
+
+      input, textarea
+        padding             2px 6px
+        font-size           13px
+        border-radius       4px
+
+      .kdselectbox
+        width               100%
+        height              28px
+        border-radius       4px
+        borderBox()
+
+        .title
+          line-height       28px
+          padding           0 40px 0 5px
+
+        .arrows
+          top               6px
+
+      .validation-error
+        border              1px solid #963624
+        background          #423133
+
+    .credential-creation-intro
+      padding               20px
+      background            $stack-bg-color-dark
+      margin-top            30px
+      margin-bottom        -30px
+      borderBox()
+
 
 #kdmaincontainer.hover
 #kdmaincontainer.collapsed
